--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
                         <p>领1000元新人礼包</p>
                     </span>
                 </a>
+                <div class="vip"><span></span><a class="logout">退出</a></div>
+
             </div>
             <div class="right">
                 <ul>
@@ -44,7 +46,7 @@
 <!-- 头部logo -->
 <div class="header">
    <div class="headerCen">
-        <img src="./../static/images/logo.png" >
+       <a class="logo" href="./index.html"> <img src="./../static/images/logo.png" ></a>
     <div class="headerSearch">
             <div class="search">
                     <span class="iconfont">&#xe7a6;</span>
@@ -54,7 +56,7 @@
                     <span class="iconfont">&#xe7a6;</span>
             </div>
     </div>
-    <a href="#">
+    <a class="cart" href="./views/cart.html">
             <span class="iconfont">&#xe614;</span>购物车
     </a>
    </div>
@@ -68,20 +70,20 @@
             </div>
             <ul>
                 <li><a href="./views/list.html"><span class="iconfont">&#xe603;</span>美容彩妆<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe61a;</span>母婴儿童<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe61b;</span>营养保健<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe60d;</span>数码家电<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe638;</span>个人洗护<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe609;</span>服饰鞋靴<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe6ea;</span>运动户外<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe60a;</span>手表配饰<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe747;</span>极致轻奢<b>></b></a></li>
-                <li><a href="#"> <span class="iconfont">&#xe608;</span>家居生活<b>></b></a></li>
-                <li><a href="#"><span class="iconfont">&#xe621;</span>环球美食<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe61a;</span>母婴儿童<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe61b;</span>营养保健<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe60d;</span>数码家电<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe638;</span>个人洗护<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe609;</span>服饰鞋靴<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe6ea;</span>运动户外<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe60a;</span>手表配饰<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe747;</span>极致轻奢<b>></b></a></li>
+                <li><a href="./views/list.html"> <span class="iconfont">&#xe608;</span>家居生活<b>></b></a></li>
+                <li><a href="./views/list.html"><span class="iconfont">&#xe621;</span>环球美食<b>></b></a></li>
             </ul>
         </div>
         <ul>
-            <li><a href="">首页</a></li>
+            <li><a href="./index.html">首页</a></li>
             <li><a href="">今日限时购</a></li>
             <li><a href="">每日上新</a></li>
             <li><a href="">国家馆</a></li>
@@ -97,41 +99,41 @@
 <div class="banner">
     <div class="swiper-container">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><a href="https://search.kaola.com/brand/4303.html"><img src="./../static/images/banner1.jpg" alt=""></a></div>
-          <div class="swiper-slide"><a href="https://search.kaola.com/brand/7001.html"><img src="./../static/images/banner2.jpg" alt=""></a></div>
-          <div class="swiper-slide"><a href="https://search.kaola.com/brand/1023.html"><img src="./../static/images/banner3.jpg" alt=""></a></div>
-          <div class="swiper-slide"><a href="https://search.kaola.com/brand/2849.html"><img src="./../static/images/banner4.jpg" alt=""></a></div>
-          <div class="swiper-slide"><a href="https://search.kaola.com/brand/2849.html"><img src="./../static/images/banner5.jpg" alt=""></a></div>
-          <div class="swiper-slide"><a href="https://search.kaola.com/brand/5077.html"><img src="./../static/images/banner6.jpg" alt=""></a></div>
+          <div class="swiper-slide"><a href="./views/list.html"><img src="./../static/images/banner1.jpg" alt=""></a></div>
+          <div class="swiper-slide"><a href="./views/list.html"><img src="./../static/images/banner2.jpg" alt=""></a></div>
+          <div class="swiper-slide"><a href="./views/list.html"><img src="./../static/images/banner3.jpg" alt=""></a></div>
+          <div class="swiper-slide"><a href="./views/list.html"><img src="./../static/images/banner4.jpg" alt=""></a></div>
+          <div class="swiper-slide"><a href="./views/list.html"><img src="./../static/images/banner5.jpg" alt=""></a></div>
+          <div class="swiper-slide"><a href="./views/list.html"><img src="./../static/images/banner6.jpg" alt=""></a></div>
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
         <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <a href="javascript:;" class="swiper-button-next"></a>
+        <a href="javascript:;" class="swiper-button-prev"></a>
     </div>
     <div class="promise">
         <div class="proCen">
             <div class="proCenLeft">
-                <a href="#">
+                <a href="javascript:;">
                     <i  class="iconfont">&#xe685;</i>
                     <span>考拉自营</span>
                 </a>
-                <a href="#">
+                <a href="javascript:;">
                     <i  class="iconfont">&#xe72f;</i>
                     <span>全球直采</span>
                 </a>
-                <a href="#">
+                <a href="javascript:;">
                     <i  class="iconfont">&#xe640;</i>
                     <span>假一赔十</span>
                 </a>
-                <a href="#">
+                <a href="javascript:;">
                     <i  class="iconfont">&#xe719;</i>
                     <span>售后无忧</span>
                 </a>
             </div>
             <div class="proCenRight">
-                <a href="#">领考拉1000元新人礼，APP下单更享手机价</a>
+                <a href="javascript:;">领考拉1000元新人礼，APP下单更享手机价</a>
             </div>
         </div>
     </div>
@@ -140,10 +142,10 @@
 <!-- items -->
 <div class="items">
     <div class="itemsCen">
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
+        <a href="./views/list.html"></a>
+        <a href="./views/list.html"></a>
+        <a href="./views/list.html"></a>
+        <a href="./views/list.html"></a>
     </div>
 </div>
 <!-- Limited time -->
@@ -218,7 +220,16 @@
 <script src="./js/cookie.js"></script>
 <script>
     var u=getCookie('username');
-    console.log(u)
+    if(u==undefined){
+        document.querySelector(".topNav .vip").innerHTML="";
+    }else{
+        document.querySelector(".topNav .vip span").innerText=u;
+        document.querySelector(".topNav .vip .logout").onclick=function(){
+        delCookie("username");
+        location.href='./views/login.html'
+    }
+    }
+    
 
 
 
